--- a/ooresults/templates/classes_table.html
+++ b/ooresults/templates/classes_table.html
@@ -42,7 +42,7 @@ $def format_voided_legs(legs):
 <p/>
 
 <div>
-    <table class="dte" id="cls.table" onclick="cls_highlight(event)">
+    <table class="dte" id="cls.table" onclick="cls_highlight(event)" ondblclick="cls_highlight(event)" onmousedown="table_mousedown(event)">
         <thead>
             <tr id="clas.theader" class="dth">
                 <th class="dth">Name</th>
