--- a/ooresults/templates/courses_table.html
+++ b/ooresults/templates/courses_table.html
@@ -20,7 +20,7 @@ $def with (event, courses)
 <p/>
 
 <div>
-    <table class="dte" id="cou.table" onclick="cou_highlight(event)">
+    <table class="dte" id="cou.table" onclick="cou_highlight(event)" ondblclick="cou_highlight(event)" onmousedown="table_mousedown(event)">
         <thead>
             <tr id="cour.theader" class="dth">
                 <th class="dth">Name</th>
