--- a/ooresults/templates/entries_table.html
+++ b/ooresults/templates/entries_table.html
@@ -47,7 +47,7 @@ $def f(value) -> str:
 <p/>
 
 <div>
-    <table class="dte" id="entr.table" onclick="entr_highlight(event)">
+    <table class="dte" id="entr.table" onclick="entr_highlight(event)" ondblclick="entr_highlight(event)" onmousedown="table_mousedown(event)">
         <thead>
             <tr id="entr.theader" class="dth">
                 <th class="dth">&nbsp;&nbsp;NC&nbsp;&nbsp;</th>
