Unit tests for rendering html templates extended

--- a/ooresults/templates/demo_reader.html
+++ b/ooresults/templates/demo_reader.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>ooresults Demo reader</title>
-        <link rel="stylesheet" href="mystatic/style.css">
-        <link rel="stylesheet" href="mystatic/style-tab.css">
+        <link rel="stylesheet" href="mystatic/style.css"/>
+        <link rel="stylesheet" href="mystatic/style-tab.css"/>
         <style>
             .bgr {background-color: #ff7070;}
             .bgy {background-color: #ffff00;}
