--- a/ooresults/templates/si/si2_data.html
+++ b/ooresults/templates/si/si2_data.html
@@ -54,7 +54,7 @@ $code
 <p></p>
 
 <div>
-    <table class="dt">
+    <table id="si2.messages" class="dt">
         <thead>
             <tr class="dt">
                 <th class="dt">Read</th>
@@ -88,7 +88,7 @@ $code
 <p></p>
 
 <div>
-    <table style="text-align: left">
+    <table id="si2.status" style="text-align: left">
         $if status is None or status == 'readerOffline':
             <tr style="color:red;">
                 <th style="padding-right: 10px">Card reader status:</th>
