--- a/ooresults/templates/si/si1_error.html
+++ b/ooresults/templates/si/si1_error.html
@@ -1,6 +1,6 @@
 $def with (message)
 
-<div class="bgy">
+<div id="si1.div" class="bgy">
     <div style="height: 37vh;" class="vertical-center">
         <p class="s2">$message['controlCard']</p>
     </div>
