--- a/ooresults/templates/unauthorized.html
+++ b/ooresults/templates/unauthorized.html
@@ -1,13 +1,11 @@
- 
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
+<!DOCTYPE HTML>
+<html>
+<head>
 <title>401 Unauthorized</title>
-</head><body>
+</head>
+<body>
 <h1>Unauthorized</h1>
-<p>This server could not verify that you
-are authorized to access the document
-requested.  Either you supplied the wrong
-credentials (e.g., bad password), or your
-browser doesn't understand how to supply
-the credentials required.</p>
-</body></html>
+<p>This server could not verify that you are authorized to access the document requested. Either you supplied the wrong
+credentials (e.g., bad password), or your browser doesn't understand how to supply the credentials required.</p>
+</body>
+</html>
